--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "npx_card",
+  "name": "maeldonn",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/maeldonn/npx_card.git",
-  "author": "maeldonn <57325246+maeldonn@users.noreply.github.com> (maeldonn.github.io)",
-  "license": "MIT",
+  "description": "A business card for Maël Donnart (@maeldonn)",
+  "main": "card.js",
+  "bin": {
+    "maledonn": "./card.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maeldonn/npx_card.git"
+  },
+  "scripts": {
+    "test": "node card.js",
+    "pub": "npm version major & npm publish"
+  },
   "dependencies": {
-    "boxen": "^5.0.0",
     "chalk": "^4.1.0",
-    "clear": "^0.1.0",
-    "cli-spinners": "^2.5.0",
-    "inquirer": "^7.3.3",
-    "open": "^7.4.0",
-    "ora": "^5.3.0",
-    "request": "^2.88.2"
-  }
+    "boxen": "^4.2.0",
+    "clear": "^0.1.0"
+  },
+  "keywords": [
+    "card",
+    "npm",
+    "npm card",
+    "npx",
+    "npx card",
+    "business card"
+  ],
+  "author": "maeldonn <57325246+maeldonn@users.noreply.github.com> (maeldonn.github.io)",
+  "license": "MIT"
 }
