--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "maeldonn",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "A business card for Maël Donnart (@maeldonn)",
   "main": "card.js",
   "bin": {
-    "maledonn": "./card.js"
+    "maeldonn": "./card.js"
   },
   "repository": {
     "type": "git",
